[package]
name = "qtime"
version = "0.1.0"
edition = "2021"
authors = ["Quantum <me@quantum5.ca>"]
description = "qtime is a simple server that returns the current time in various formats."
homepage = "https://github.com/quantum5/qtime"
repository = "https://github.com/quantum5/qtime"
license = "AGPL-3"
keywords = ["time", "server"]
categories = ["web-programming::http-server"]

[dependencies]
clap = { version = "4.5", features = ["env"] }
clap_derive = "4.5"
axum = "0.8"
chrono = "0.4"
tokio = { version = "1.47", features = ["full"] }

[profile.release]
lto = true
strip = true
panic = "abort"
